Configuração de CORS e segurança para o backend